main.css
/* general
========= */
html,body {
  margin: 0;
  padding: 0;
}

.purple {
  color: #6600A1;
}


.header h1 {
/*  font-size: 60px;*/
  letter-spacing: 1.2px;
}



/* arrows 
============ */

.arrows li {
    display: inline-block;
    height: 30px;
    line-height: 30px;
    width: 210px;
    margin: 5px 1px 0 0;
    text-indent: 35px;
    position: relative;
    color: #fff;
}

.arrows li:before {
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    left: -2px;
    border-style: solid;
    border-width: 15px 0 15px 15px;
    border-color: transparent transparent transparent #fff;
    z-index: 0;
}

.arrows li:first-child:before {
    border-color: transparent;
}

.arrows li p:after {
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    right: -15px;
    border-style: solid;
    border-width: 15px 0 15px 15px;
    border-color: transparent transparent transparent #9999CC;
    z-index: 10;
}


.arrows li.active p {
    background-color: #6600A1;
    z-index: 100;
}

.arrows li.active p:after {
    border-left-color: #6600A1;
}

.arrows li p {
    display: block;
    background: #9999CC;
}


/*  the products for selling
========= */

.product {
  background-color: #6600A1;
  color: #fff;
  padding: 10px 0;
}

.box {
  border: 1px solid black;
  margin-bottom: 4px;
}

.product-list {
  list-style-type: none;
  font-size: 18px;
}

.price-content {
  border: 1px solid black;
  text-align: center;
  border-radius: 3px;
  margin-top: 20px;
}

.price-content p {
  font-size: 18px;
}

.checkout-content {
  border: 1px solid black;
  border-radius: 3px;
  background-color: #2A7700;
  text-align: center;
  color: #fff;
  margin-top: 10px;
}
/* buttons for switching pages 
========= */
.next-button {
  float: right;
}

.next{
  background-color: #6600A1;
  color: #fff;
  margin-left: 20px;
  padding: 8px;
}

.prev {
  background-color: #D4D4D4;
  color: #fff;
  margin-right: 20px;
  padding: 8px;
}

.arrow:hover {
  cursor: pointer;
}

.slide {
  width: 23%;
}

.prev-button {
  display: none;
}

